--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.6)
 project(gl_no_clion)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
-set(SOURCE_FILES main.cpp)
+set(SOURCE_FILES main.cpp shader.h shader.cpp triangulo.h triangulo.cpp)
 
 add_executable(gl_no_clion ${SOURCE_FILES})
 
@@ -14,6 +14,10 @@ set (GLUT_INCLUDE_DIR "/usr/include/GL")
 set (GLUT_LIB "/usr/lib/x86_64-linux-gnu/libglut.so")
 target_include_directories(gl_no_clion PUBLIC ${GLUT_INCLUDE_DIR})
 target_link_libraries(gl_no_clion ${GLUT_LIB})
-
+# Find Glew
+set (GLEW_INCLUDE_DIR "/usr/include/GL")
+set (GLEW_LIB "/usr/lib/x86_64-linux-gnu/libGLEW.so")
+target_include_directories(gl_no_clion PUBLIC ${GLEW_INCLUDE_DIR})
+target_link_libraries(gl_no_clion ${GLEW_LIB})
 
 
